--- a/config/ansible/playbooks/update.yml
+++ b/config/ansible/playbooks/update.yml
@@ -1,6 +1,6 @@
 ---
 - name: Playbook for managing the updates in RPi
-  hosts: picluster
+  hosts: purencool_cluster
   tasks:
     - name: 'Update apt package cache'
       become: yes
