--- a/config/ansible/playbooks/upgrade.yml
+++ b/config/ansible/playbooks/upgrade.yml
@@ -1,6 +1,6 @@
 ---
 - name: Playbook for upgrading the RPis
-  hosts: picluster
+  hosts: purencool_cluster
   gather_facts: no
   tasks:
     - name: Update and upgrade apt packages
